--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
+    "screenfull": "^5.0.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "svg-sprite-loader": "^5.0.0",
