--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.13.2",
     "fuse.js": "^3.4.3",
     "jsencrypt": "^3.0.0-rc.1",
+    "normalize.css": "^8.0.1",
     "vue": "^2.5.2",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.0.1",
@@ -53,7 +54,7 @@
     "nprogress": "^0.2.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "path-to-regexp": "^6.1.0",
+    "path-to-regexp": "^2.4.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
