--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@riophae/vue-treeselect": "^0.4.0",
     "autoprefixer": "^7.1.2",
     "axios": "^0.19.2",
     "babel-core": "^6.22.1",
